# onec_comp_gen

./: .gitignore  README.md
app_tauri/: package-lock.json  package.json  vite.config.ts
app_tauri/src/: App.tsx  main.tsx  store.ts
app_tauri/src-tauri/: Cargo.toml  tauri.conf.json
app_tauri/src-tauri/src/: dto.rs  file_op.rs  lib.rs  main.rs
app_tauri/src/components/: BuildPanel.tsx  FormOfMethods.tsx  FunctionPanel.tsx  IconAdd.tsx  IconEdit.tsx  IconTrash.tsx  ThemeSwitcher.tsx
source/base_template/: ПрименениеВнешнейКомпоннентыВ1С.epf
source/base_template/cpp/lib/: common.cpp  common.h
source/base_template/cpp/source/: AddInNative.cpp  AddInNative.h  CMakeLists.txt
source/base_template/cpp/source/impl/: rust.h  test.cpp  test.h
source/base_template/rust/: Cargo.toml
source/base_template/rust/src/: impl_test.rs  interaction_with_cpp.rs  lib.rs  struct_dto.rs
